--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "dev":"nodemon Backend/app.js"
+    "dev": "nodemon Backend/app.js"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "rxjs": "~6.6.0",
